Fixed download btn spacing and Front Page Nasa

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -17,13 +17,3 @@
   object-fit: contain;
   position: relative;
 }
-
-
-.downloadbtn{
-  display: flex;
-  align-self: end;
-  margin-top: 3vh;
-  color: black;
-  font-size: 22px;
-  font-family: 'Markazi Text', serif;
-}
